[package]
name = "gifos"
version = "0.1.0"
authors = ["gifnksm <makoto.nksm+github@gmail.com>"]
edition = "2018"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
bootloader = "0.9"
lazy_static = {version = "1.4", features = ["spin_no_std"]}
spin = "0.5"
volatile = "0.2"
