[package]
name = "gifos"
version = "0.1.0"
authors = ["gifnksm <makoto.nksm+github@gmail.com>"]
edition = "2018"

# https://github.com/rust-lang/cargo/issues/7359
# [profile.dev]
# panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
bootloader = "0.9"
lazy_static = {version = "1.4", features = ["spin_no_std"]}
pc-keyboard = "0.5.1"
pic8259_simple = "0.2.0"
spin = "0.5"
uart_16550 = "0.2"
volatile = "0.2"
x86_64 = "0.13"

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
test-success-exit-code = 33         # (0x10 << 1) | 1
test-timeout = 300

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false
